--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ header{
      display: flex;
      justify-content: space-between;
      align-items: center;
+     transition: all 0.5s ease;
  }
 
  .todo li{
@@ -79,4 +80,13 @@ header{
 
   .todo-item{
       padding: 0rem 0.5rem;
+  }
+
+  .fa-trash, fa-check{
+      pointer-events: none;
+  }
+
+  .completed{
+      text-decoration: line-through;
+      opacity: 0.5;
   }
